syntax = "proto3";

package fairyring.keyshare;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "fairyring/x/keyshare/types";

// Msg defines the Msg service.
service Msg {
  rpc RegisterValidator (MsgRegisterValidator) returns (MsgRegisterValidatorResponse);
  rpc SendKeyshare      (MsgSendKeyshare     ) returns (MsgSendKeyshareResponse     );

  // this line is used by starport scaffolding # proto/tx/rpc
  rpc CreateLatestPubKey (MsgCreateLatestPubKey) returns (MsgCreateLatestPubKeyResponse);
}
message MsgRegisterValidator {
  string creator = 1;
}

message MsgRegisterValidatorResponse {
  string creator = 1;
}

message MsgSendKeyshare {
  string creator       = 1;
  string message       = 2;
  uint64 keyShareIndex = 3;
  uint64 blockHeight   = 4;
}

message MsgSendKeyshareResponse {
  string creator             = 1;
  string keyshare            = 2;
  uint64 keyshareIndex       = 3;
  uint64 blockHeight         = 4;
  uint64 receivedBlockHeight = 5;
  bool   success             = 6;
  string errorMessage        = 7;
}


// this line is used by starport scaffolding # proto/tx/message
message MsgCreateLatestPubKey {
  string creator   = 1;
  string publicKey = 2;
  repeated string commitments = 3;
}

message MsgCreateLatestPubKeyResponse {}
